# ontoclassifier

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
examples/: Pizzaiolo_pipeline.ipynb  SCDB_pipeline.ipynb  XTRAINS_pipeline.ipynb  poker_app.py
examples/data/: cards.owl  scdb.xml  xtrains_ontology.owl
ontoclassifier/: __init__.py  torch_onto_classifier_feature.py  torch_onto_classifier_helper.py
ontoclassifier/explainers/: __init__.py  oe_explainer.py  ontoclassifier_explainer.py  vizualisation_toolbox.py
ontoclassifier/nn/: __init__.py  features_extractor.py  onto_classifier.py  onto_layers.py  ontological_extractor.py
ontoclassifier/wrappers/: __init__.py  property_wrapper.py  pw_isa.py  yolov8_object_detector.py  yolov8_property_wrapper.py
