[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="ontoclassifier"
version="0.1.0"
authors = [
    {name = "Arnaud Lewandowski", email = "arnaud.lewandowski@univ-littoral.fr"},
    {name = "Grégory Bourguin", email = "gregory.bourguin@univ-littoral.fr"},
]
description="Ontology-based Pytorch classifier"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "icecream",
    "joblib",
    "matplotlib",
    "numpy",
    "owlready2",
    "scikit-learn",
    "torch",
    "ultralytics",
]

[project.urls]
Homepage = "https://github.com/SysReIC/ontoclassifier"
Issues = "https://github.com/SysReIC/ontoclassifier/issues"
